--- a/.github/workflows/dev-release.yaml
+++ b/.github/workflows/dev-release.yaml
@@ -1,4 +1,4 @@
-name: Dev Release Charts (GitHub Pages subdir)
+name: Release Charts Dev
 
 on:
   push:
@@ -22,40 +22,76 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Configure Git
+        run: |
+          git config user.name "$GITHUB_ACTOR"
+          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+
       - name: Install Helm
         uses: azure/setup-helm@v3
         with:
           token: "${{ secrets.GITHUB_TOKEN }}"
 
+      - name: Install chart-releaser (cr)
+        run: |
+          set -euo pipefail
+          CR_VERSION="1.7.0"
+          curl -sSL -o cr.tgz \
+            "https://github.com/helm/chart-releaser/releases/download/v${CR_VERSION}/chart-releaser_${CR_VERSION}_linux_amd64.tar.gz"
+          tar -xzf cr.tgz cr
+          sudo mv cr /usr/local/bin/cr
+          cr version
+
       # - name: Package charts
       #   run: |
       #     set -euo pipefail
-      #     mkdir -p .devrepo
+      #     rm -rf .cr-release-packages
+      #     mkdir -p .cr-release-packages
+
+      #     # Adjust if your charts are not in charts/*
       #     for d in charts/*; do
       #       if [ -f "$d/Chart.yaml" ]; then
-      #         helm package "$d" -d .devrepo
+      #         cr package "$d" --package-path .cr-release-packages
       #       fi
       #     done
-      
+
+
       - name: Package kuber-agent chart only
         run: |
           set -euo pipefail
-          mkdir -p .devrepo
-          helm package charts/kuber-agent -d .devrepo
+          rm -rf .cr-release-packages
+          mkdir -p .cr-release-packages
+          cr package charts/kuber-agent --package-path .cr-release-packages
 
-      - name: Generate index.yaml for /dev
+      - name: Upload packages to GitHub Releases (DEV releases)
+        env:
+          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
         run: |
           set -euo pipefail
           OWNER="${GITHUB_REPOSITORY%%/*}"
           REPO="${GITHUB_REPOSITORY##*/}"
-          URL="https://${OWNER}.github.io/${REPO}/dev"
-          helm repo index .devrepo --url "$URL"
 
-      - name: Deploy to gh-pages:/dev
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: gh-pages
-          publish_dir: .devrepo
-          destination_dir: dev
-          keep_files: true
+          cr upload \
+            --owner "$OWNER" \
+            --git-repo "$REPO" \
+            --package-path .cr-release-packages \
+            --skip-existing \
+            --make-release-latest=false \
+            --release-name-template "{{ .Name }}-{{ .Version }}-dev"
+            
+
+      - name: Update gh-pages/dev/index.yaml (no packages on gh-pages)
+        env:
+          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+        run: |
+          set -euo pipefail
+          OWNER="${GITHUB_REPOSITORY%%/*}"
+          REPO="${GITHUB_REPOSITORY##*/}"
+
+          cr index \
+            --owner "$OWNER" \
+            --git-repo "$REPO" \
+            --pages-branch gh-pages \
+            --pages-index-path dev/index.yaml \
+            --release-name-template "{{ .Name }}-{{ .Version }}-dev" \
+            --push
